# brother-hl4150cdn-driver

./: .gitignore  CHANGELOG.md  README.md  main.py  noxfile.py  pyproject.toml  setup_cython.py
.github/workflows/: ci.yml
cups/: brhl4150cdn-filter  brhl4150cdn.ppd  install.sh  uninstall.sh
scripts/: extract_blobs.sh  fit_lut_coefficients.py
src/: _rle_fast.pyx  brfilter.py  brother_encode.py  cli.py  color_lut.py  color_lut_gen.py  dither.py  fine_encoder.py  pipeline.py  plane_encoders.py  ppm.py  rle.py  saturation.py  settings.py  tone_curve.py  transforms.py  xl2hb.py
tests/: brother_decode.py  conftest.py  extract_fixtures.py  fixture_utils.py  test_buffer_management.py  test_color_lut_gen.py  test_color_separation.py  test_compression.py  test_cups_options.py  test_cython_rle.py  test_dithering.py  test_full_pipeline.py  test_inverse_lut.py  test_pjl.py  test_plane_buffer.py  test_ppm_reader.py  test_print_settings.py  test_saturation.py  test_tone_curve.py  test_xl2hb_stream.py
tests/fixtures/: allblack_1000.xl2hb.zst  cyan_100_brightness_n20.xl2hb.zst  cyan_100_brightness_p20.xl2hb.zst  cyan_100_cm_none.xl2hb.zst  cyan_100_combined.xl2hb.zst  cyan_100_contrast_n20.xl2hb.zst  cyan_100_contrast_p20.xl2hb.zst  cyan_100_saturation_n20.xl2hb.zst  cyan_100_toner_save.xl2hb.zst  cyan_100_vivid.xl2hb.zst  fine_black.xl2hb.zst  fine_cyan100.xl2hb.zst  fine_gray50.xl2hb.zst  fine_white.xl2hb.zst  gray50_1000.xl2hb.zst  gray75_1000.xl2hb.zst  halfblack_1000.xl2hb.zst  mini_1pixel.xl2hb.zst  mini_black.xl2hb.zst  mini_black_mono.xl2hb.zst  mini_blue.xl2hb.zst  mini_checker.xl2hb.zst  mini_cyan.xl2hb.zst  mini_gradient.xl2hb.zst  mini_gradient_mono.xl2hb.zst  mini_gray128.xl2hb.zst  mini_gray128_mono.xl2hb.zst  mini_green.xl2hb.zst  mini_hline.xl2hb.zst  mini_magenta.xl2hb.zst  mini_red.xl2hb.zst  mini_red_mono.xl2hb.zst  mini_vline.xl2hb.zst  mini_white.xl2hb.zst  mini_yellow.xl2hb.zst  precise_8px_block.xl2hb.zst  precise_all_black.xl2hb.zst  precise_cyan_line.xl2hb.zst  precise_first_line.xl2hb.zst  precise_single_hline.xl2hb.zst  (+19 more)
